--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hammerjs": "^2.0.8",
     "material-components-web": "^6.0.0",
     "rxjs": "~6.4.0",
+    "serialize-javascript": "^4.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
